fix scrollbars on firefox and apply scrollbar to everything

--- a/kibbeh/src/styles/globals.css
+++ b/kibbeh/src/styles/globals.css
@@ -68,6 +68,27 @@ html
   display: flex;
 }
 
+/* for firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-primary-700);
+}
+
+/* for non-firefox */
+::-webkit-scrollbar {
+  overflow: overlay;
+  width: thin;
+  /* shouldnt hardcode width, pls find way to make it dynamic, thin want working for me... */
+}
+
+::-webkit-scrollbar-track {
+  display: initial;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-primary-700);
+}
+
 html,
 body,
 #__next {
